# xiio

./: LICENSE  README.md  pyproject.toml  tests.py  xiio.py
.github/workflows/: main.yml
tests/: test_compat.py  test_core.py  test_http.py  test_http_utils.py  test_multiplex.py  test_signals.py  test_socket.py  test_subprocess.py  test_threads.py  utils.py
xiio/: __init__.py  compat.py  core.py  http.py  http_utils.py  multiplex.py  signals.py  socket.py  subprocess.py  threads.py
