[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xiio"
version = "0a1"
description = "really simple async runtime"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Tobias Bengfort", email = "tobias.bengfort@posteo.de"}
]
requires-python = ">= 3.11"

[project.urls]
Homepage = "https://github.com/xi/xiio"

[tool.coverage.run]
branch = true
include = ["xiio/**"]
